@@ -3,6 +3,10 @@ package com.spring.fit.backend.order.service.impl;
 import com.spring.fit.backend.common.enums.FulfillmentStatus;
 import com.spring.fit.backend.common.enums.PaymentStatus;
 import com.spring.fit.backend.common.exception.ErrorException;
+import com.spring.fit.backend.order.service.InventoryService;
+import com.spring.fit.backend.order.service.ShipmentService;
+import com.spring.fit.backend.voucher.domain.dto.VoucherValidateRequest;
+import com.spring.fit.backend.voucher.service.VoucherService;
 import org.springframework.http.HttpStatus;
 import com.spring.fit.backend.order.domain.dto.request.CreateOrderRequest;
 import com.spring.fit.backend.order.domain.dto.request.UpdateOrderRequest;
@@ -13,9 +17,9 @@ import com.spring.fit.backend.order.repository.OrderRepository;
 import com.spring.fit.backend.order.service.OrderService;
 import com.spring.fit.backend.payment.domain.entity.Payment;
 import com.spring.fit.backend.product.repository.ProductDetailRepository;
-import com.spring.fit.backend.promotion.domain.dto.request.PromotionApplyRequest;
-import com.spring.fit.backend.promotion.domain.dto.response.PromotionApplyResponse;
-import com.spring.fit.backend.promotion.service.PromotionService;
+import com.spring.fit.backend.product.repository.ProductImageRepository;
+import com.spring.fit.backend.promotion.domain.entity.OrderDetailPromotion;
+import com.spring.fit.backend.promotion.repository.OrderDetailPromotionRepository;
 import com.spring.fit.backend.security.repository.UserRepository;
 import com.spring.fit.backend.user.repository.AddressRepository;
 import com.spring.fit.backend.voucher.domain.entity.Voucher;
@@ -29,8 +33,10 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.time.LocalDateTime;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -44,8 +50,12 @@ public class OrderServiceImpl implements OrderService {
     private final UserRepository userRepository;
     private final AddressRepository addressRepository;
     private final ProductDetailRepository productDetailRepository;
+    private final ProductImageRepository productImageRepository;
     private final VoucherRepository voucherRepository;
-    private final PromotionService promotionService;
+    private final OrderDetailPromotionRepository orderDetailPromotionRepository;
+    private final ShipmentService shipmentService;
+    private final VoucherService voucherService;
+    private final InventoryService inventoryService;
 
     @Override
     public OrderResponse createOrder(Long userId, CreateOrderRequest request) {
@@ -76,14 +86,14 @@ public class OrderServiceImpl implements OrderService {
             );
 
             if (maybeVoucher.isEmpty()) {
-                log.warn("Inside OrderServiceImpl.createOrder, voucherCode {} not valid for subtotal {} at {}", 
+                log.warn("Inside OrderServiceImpl.createOrder, voucherCode {} not valid for subtotal {} at {}",
                         request.getVoucherCode(), request.getSubtotalAmount(), now);
                 throw new ErrorException(HttpStatus.BAD_REQUEST,
                         "Invalid or expired voucher code: " + request.getVoucherCode());
             }
 
             voucher = maybeVoucher.get();
-            log.info("Inside OrderServiceImpl.createOrder, resolved voucher id={} code={}", 
+            log.info("Inside OrderServiceImpl.createOrder, resolved voucher id={} code={}",
                     voucher.getId(), voucher.getCode());
         }
 
@@ -98,14 +108,28 @@ public class OrderServiceImpl implements OrderService {
                 .totalAmount(BigDecimal.valueOf(request.getTotalAmount()))
                 .status(FulfillmentStatus.UNFULFILLED)
                 .paymentStatus(PaymentStatus.UNPAID)
-                .voucher(voucher != null ? voucher : null)
+                .voucher(voucher)
                 .build();
 
-        // Create order details
+        // Create order details and update stock
         for (var detailRequest : request.getOrderDetails()) {
             var productDetail = productDetailRepository.findById(detailRequest.getProductDetailId())
                     .orElseThrow(() -> new ErrorException(HttpStatus.NOT_FOUND,
                             "Inside OrderServiceImpl.createOrder, product detail not found with id: " + detailRequest.getProductDetailId()));
+
+            int requestedQuantity = detailRequest.getQuantity();
+            int currentStock = productDetail.getQuantity();
+
+            if (currentStock < requestedQuantity) {
+                throw new ErrorException(HttpStatus.BAD_REQUEST,
+                        "Not enough stock for product: " + productDetail.getProduct().getTitle() +
+                        " (Size: " + productDetail.getSize().getLabel() + ", Color: " + productDetail.getColor().getName() +
+                        "). Requested: " + requestedQuantity + ", Available: " + currentStock);
+            }
+
+            // subtract quantity from stock
+            productDetail.setQuantity(currentStock - requestedQuantity);
+            productDetailRepository.save(productDetail);
 
             // Get promotion ID if provided
             Long promotionId = detailRequest.getPromotionId();
@@ -116,7 +140,7 @@ public class OrderServiceImpl implements OrderService {
                     .title(productDetail.getProduct().getTitle())
                     .colorLabel(productDetail.getColor().getName())
                     .sizeLabel(productDetail.getSize().getLabel())
-                    .quantity(detailRequest.getQuantity())
+                    .quantity(requestedQuantity)
                     .unitPrice(productDetail.getPrice())
                     .promotionId(promotionId)
                     .build();
@@ -136,8 +160,26 @@ public class OrderServiceImpl implements OrderService {
 
         // Save order
         var savedOrder = orderRepository.save(order);
+        if (voucher != null) {
+            try {
+                voucherService.applyVoucher(VoucherValidateRequest.builder()
+                        .code(voucher.getCode())
+                        .subtotal(order.getSubtotalAmount().doubleValue())
+                        .build(), order.getUser().getId(), order.getId());
+            } catch (Exception e) {
+                throw new ErrorException(HttpStatus.BAD_REQUEST, e.getMessage());
+            }
+
+        }
         log.info("Inside OrderServiceImpl.createOrder created successfully with id: {}", savedOrder.getId());
 
+        // 4: Create shipment with tracking after payment success
+        try {
+            shipmentService.createShipmentForOrder(order, null); // null = use default carrier
+            log.info("Inside PaymentServiceImpl.handlePaymentSucceeded, Shipment created for order: {}", order);
+        } catch (Exception e) {
+            log.error("Inside PaymentServiceImpl.handlePaymentSucceeded, Failed to create shipment for order {}: {}", order, e.getMessage());
+        }
         return mapToResponse(savedOrder);
     }
 
@@ -267,54 +309,111 @@ public class OrderServiceImpl implements OrderService {
     }
 
     private List<OrderResponse.OrderDetailResponse> mapOrderDetailsToResponse(Set<OrderDetail> orderDetails) {
+        if (orderDetails == null || orderDetails.isEmpty()) {
+            return List.of();
+        }
+
+        // Get orderId from first detail (all details belong to same order)
+        Long orderId = orderDetails.iterator().next().getOrder().getId();
+
+        // Load all OrderDetailPromotions for this order in one query
+        List<OrderDetailPromotion> orderDetailPromotions = orderDetailPromotionRepository.findByOrderId(orderId);
+
+        // Create a map for quick lookup: detailId -> OrderDetailPromotion
+        Map<Long, OrderDetailPromotion> promotionMap = orderDetailPromotions.stream()
+                .collect(Collectors.toMap(
+                        odp -> odp.getDetail().getId(),
+                        odp -> odp,
+                        (existing, replacement) -> existing
+                ));
+
+        // Collect all productDetailIds
+        List<Long> productDetailIds = orderDetails.stream()
+                .map(detail -> detail.getProductDetail().getId())
+                .distinct()
+                .toList();
+
+        // Load all images for these productDetailIds in one query
+        Map<Long, List<String>> imagesMap = Map.of(); // Initialize empty map
+        if (!productDetailIds.isEmpty()) {
+            List<Object[]> imageResults = productImageRepository.findAllImageUrlsByDetailIds(productDetailIds);
+            // Group by detailId and collect all image URLs into a list (already ordered by createdAt ASC)
+            imagesMap = imageResults.stream()
+                    .collect(Collectors.groupingBy(
+                            row -> ((Number) row[0]).longValue(), // detailId
+                            Collectors.mapping(
+                                    row -> (String) row[1], // imageUrl
+                                    Collectors.toList()
+                            )
+                    ));
+        }
+
+        final Map<Long, List<String>> finalImagesMap = imagesMap; // Final variable for use in lambda
+
         return orderDetails.stream()
                 .map(detail -> {
-                    // Tạo base response từ entity
-                    OrderResponse.OrderDetailResponse baseResponse = OrderResponse.OrderDetailResponse.builder()
+                    // Get snapshot promotion data if exists
+                    OrderDetailPromotion orderDetailPromotion = promotionMap.get(detail.getProductDetail().getId());
+
+                    BigDecimal unitPrice = detail.getUnitPrice();
+                    BigDecimal totalPrice = detail.getTotalPrice();
+                    BigDecimal finalPrice;
+                    int percentOff;
+                    Long promotionId;
+                    String promotionName;
+
+                    if (orderDetailPromotion != null) {
+                        // Use snapshot values from OrderDetailPromotion
+                        BigDecimal discountAmount = orderDetailPromotion.getDiscountAmount();
+                        promotionName = orderDetailPromotion.getPromotionName();
+                        promotionId = orderDetailPromotion.getPromotion() != null
+                                ? orderDetailPromotion.getPromotion().getId()
+                                : null;
+
+                        // Calculate finalPrice: totalPrice - discountAmount
+                        finalPrice = totalPrice.subtract(discountAmount);
+                        if (finalPrice.compareTo(BigDecimal.ZERO) < 0) {
+                            finalPrice = BigDecimal.ZERO;
+                        }
+
+                        // Calculate percentOff from discountAmount and totalPrice
+                        if (totalPrice.compareTo(BigDecimal.ZERO) > 0) {
+                            percentOff = discountAmount
+                                    .multiply(BigDecimal.valueOf(100))
+                                    .divide(totalPrice, 2, RoundingMode.HALF_UP)
+                                    .intValue();
+                        } else {
+                            percentOff = 0;
+                        }
+                    } else {
+                        // No promotion applied at order creation time
+                        finalPrice = totalPrice;
+                        percentOff = 0;
+                        promotionId = null;
+                        promotionName = null;
+                    }
+
+                    // Get images list for this productDetailId
+                    Long productDetailId = detail.getProductDetail().getId();
+                    List<String> images = finalImagesMap.getOrDefault(productDetailId, List.of());
+
+                    return OrderResponse.OrderDetailResponse.builder()
                             .id(detail.getId())
-                            .productDetailId(detail.getProductDetail().getId())
+                            .productDetailId(productDetailId)
                             .title(detail.getTitle())
                             .colorLabel(detail.getColorLabel())
                             .sizeLabel(detail.getSizeLabel())
                             .quantity(detail.getQuantity())
-                            .unitPrice(detail.getUnitPrice())
-                            .totalPrice(detail.getTotalPrice())
-                            .build();
-                    
-                    // Áp dụng promotion
-                    var applyRes = PromotionApplyResponse.builder().build();
-                    try {
-                        var applyReq = PromotionApplyRequest.builder()
-                                .skuId(detail.getProductDetail().getId())
-                                .basePrice(detail.getUnitPrice())
-                                .build();
-                        applyRes = promotionService.applyBestPromotionForSku(applyReq);
-                    } catch (Exception ex) {
-                        // fallback giữ nguyên giá nếu có lỗi
-                        applyRes = PromotionApplyResponse.builder()
-                                .basePrice(detail.getUnitPrice())
-                                .finalPrice(detail.getUnitPrice())
-                                .percentOff(0)
-                                .build();
-                    }
-                    
-                    // Cập nhật thông tin promotion
-                    return OrderResponse.OrderDetailResponse.builder()
-                            .id(baseResponse.getId())
-                            .productDetailId(baseResponse.getProductDetailId())
-                            .title(baseResponse.getTitle())
-                            .colorLabel(baseResponse.getColorLabel())
-                            .sizeLabel(baseResponse.getSizeLabel())
-                            .quantity(baseResponse.getQuantity())
-                            .unitPrice(baseResponse.getUnitPrice())
-                            .finalPrice(applyRes.getFinalPrice())
-                            .percentOff(applyRes.getPercentOff())
-                            .promotionId(applyRes.getPromotionId())
-                            .promotionName(applyRes.getPromotionName())
-                            .totalPrice(baseResponse.getTotalPrice())
+                            .unitPrice(unitPrice)
+                            .finalPrice(finalPrice)
+                            .percentOff(percentOff)
+                            .promotionId(promotionId)
+                            .promotionName(promotionName)
+                            .totalPrice(totalPrice)
+                            .images(images)
                             .build();
                 })
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<OrderResponse.PaymentResponse> mapPaymentsToResponse(Set<Payment> payments) {
@@ -329,7 +428,7 @@ public class OrderServiceImpl implements OrderService {
                         .paidAt(payment.getPaidAt())
                         .createdAt(payment.getCreatedAt())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<OrderResponse.ShipmentResponse> mapShipmentsToResponse(
@@ -344,7 +443,70 @@ public class OrderServiceImpl implements OrderService {
                         .deliveredAt(shipment.getDeliveredAt())
                         .createdAt(shipment.getCreatedAt())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    @Override
+    @Transactional
+    public OrderResponse cancelOrder(Long orderId, Long userId) {
+        log.info("Cancelling order {} for user {}", orderId, userId);
+        
+        // Get order with all relations
+        Order order = orderRepository.findById(orderId)
+                .orElseThrow(() -> new ErrorException(HttpStatus.NOT_FOUND, 
+                        "Order not found with id: " + orderId));
+        
+        // Verify order belongs to user
+        if (!order.getUser().getId().equals(userId)) {
+            throw new ErrorException(HttpStatus.FORBIDDEN, 
+                    "Order does not belong to user");
+        }
+        
+        // Check if order can be cancelled
+        PaymentStatus currentPaymentStatus = order.getPaymentStatus();
+        if (currentPaymentStatus == PaymentStatus.PAID) {
+            throw new ErrorException(HttpStatus.BAD_REQUEST, 
+                    "Cannot cancel order with PAID status. Please create a refund request instead.");
+        }
+        
+        if (currentPaymentStatus == PaymentStatus.REFUNDED) {
+            throw new ErrorException(HttpStatus.BAD_REQUEST, 
+                    "Cannot cancel order with REFUNDED status.");
+        }
+        
+        // Only restore stock if not already cancelled
+        if (currentPaymentStatus != PaymentStatus.CANCELLED) {
+            log.info("Restoring stock for cancelled order: {}", orderId);
+            inventoryService.restoreStockForOrder(order);
+            log.info("Successfully restored stock for order: {}", orderId);
+        } else {
+            log.info("Order {} already cancelled, skipping stock restoration", orderId);
+        }
+        
+        // Update order status
+        order.setPaymentStatus(PaymentStatus.CANCELLED);
+        order.setStatus(FulfillmentStatus.CANCELLED);
+        
+        // Cancel voucher usage if any
+        try {
+            voucherService.cancelVoucherUsageByOrderId(orderId);
+        } catch (Exception e) {
+            log.warn("Failed to cancel voucher usage for order {}: {}", orderId, e.getMessage());
+        }
+        
+        // Update payment status
+        Payment payment = order.getPayments().stream()
+                .findFirst()
+                .orElse(null);
+        
+        if (payment != null) {
+            payment.setStatus(PaymentStatus.CANCELLED);
+        }
+        
+        Order savedOrder = orderRepository.save(order);
+        log.info("Successfully cancelled order: {}", orderId);
+        
+        return mapToResponse(savedOrder);
     }
 
 
